# DalyRust

./: .env.docker  .gitignore  CLAUDE.md  Cargo.toml  Config.docker.toml  Config.toml  DASHBOARD_EXTENSION_GUIDE.md  DEPLOY.sh  DEPLOYMENT.md  DOCUMENTATION_INDEX.md  Dockerfile  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_VERIFICATION.md  Makefile  README.md  Readme.md  docker-compose.infra.yml  docker-compose.yml
.claude/: settings.json
Daly-BMS/: DalyBMS_Dashboard.jsx  DalyBMS_Documentation.md  DalyBMS_Interface_ProjectDoc.docx  backup.sh  daly_alerts.py  daly_api.py  daly_bms_grafana.json  daly_influx.py  daly_mqtt.py  daly_protocol.py  daly_venus.py  daly_write.py  install.sh  test_suite.py  update.sh
Exemple/TinyBMS-web/: package-lock.json
Exemple/TinyBMS-web/public/: app.js
ReactFlow/: Correction.md  MeteoTemp.md  NodeBattery.md  NodeMPPT.md  NodeShunt.md  NodeSwitch.md  Nodes.md  Tuning.md  VisualisationComplete.jsx  batteryAnimations.css  energyCommon.css  integration.md  issue.md  meteoAnimations.css  mpptAnimations.css
archive/: web_server.c.original
archive/configmanager/: CMakeLists.txt  PHASE4_REFACTORING_CONFIG_MANAGER.md  config_manager.c.original  config_manager_core.c  config_manager_internal.h  config_manager_json.c  config_manager_mqtt.c  config_manager_network.c  config_manager_validation.c
archive/docs/: JSON_EXTRACTION_SUMMARY.md  REGISTER_EXTRACTION_COMPLETE.md  REGISTER_EXTRACTION_SUMMARY.md  REGISTER_INTEGRATION_GUIDE.md
contrib/: deploy-nodered-flows.py  export-nodered-flows.py  install-systemd.sh  uninstall-systemd.sh
contrib/irradiance-rs485/: install.sh  irradiance-rs485.service  irradiance_reader.py
crates/daly-bms-cli/: Cargo.toml
crates/daly-bms-cli/src/: main.rs
crates/daly-bms-core/: Cargo.toml
crates/daly-bms-core/src/: bus.rs  commands.rs  error.rs  lib.rs  poll.rs  protocol.rs  types.rs  write.rs
crates/daly-bms-probe/: Cargo.toml
crates/daly-bms-probe/src/: main.rs
crates/daly-bms-server/: Cargo.toml
crates/daly-bms-server/src/: autodetect.rs  config.rs  main.rs  simulator.rs  state.rs
crates/daly-bms-server/src/api/: bms.rs  chart.rs  et112.rs  mod.rs  system.rs  tasmota.rs
crates/daly-bms-server/src/bridges/: alerts.rs  influx.rs  mod.rs  mqtt.rs
crates/daly-bms-server/src/dashboard/: charts.rs  mod.rs
crates/daly-bms-server/src/et112/: mod.rs  poll.rs  types.rs
crates/daly-bms-server/src/irradiance/: mod.rs  poll.rs  types.rs
crates/daly-bms-server/src/tasmota/: mod.rs  mqtt.rs  types.rs
crates/daly-bms-server/templates/: base.html  bms_detail.html  et112.html  et112_all.html  index.html  logs.html  overview.html  settings.html  tasmota.html  tasmota_all.html  visualization.html
crates/daly-bms-venus/: Cargo.toml
crates/daly-bms-venus/src/: battery_service.rs  config.rs  heatpump_manager.rs  heatpump_service.rs  main.rs  manager.rs  meteo_manager.rs  meteo_service.rs  mqtt_source.rs  temperature_service.rs  types.rs
crates/dbus-mqtt-venus/src/: config.rs  grid_manager.rs  grid_service.rs  heatpump_manager.rs  heatpump_service.rs  main.rs  meteo_service.rs  mqtt_source.rs  platform_manager.rs  platform_service.rs  pvinverter_manager.rs  pvinverter_service.rs  switch_manager.rs  switch_service.rs  temperature_service.rs  types.rs
crates/rs485-bus/: Cargo.toml
crates/rs485-bus/src/: lib.rs  modbus_rtu.rs
docker/mosquitto/config/: mosquitto.conf
docker/nodered/: settings.js
docs/: 1-Dashboard-Unifié.txt  ATS.txt  CHINT_ATS_RS485.md  DEPLOY-VENUS-ARMV7.md  GLM5.md  Plan.md  Plan_futur.md  Readme-Lynx.md  VENUS-DEVICE-INTEGRATION.md  phase3-venus-dbus-evaluation.md
docs/chint/: CHINT.html  Chint-rs485.html  Mini.py  RS485-cmd.md  scan.md  server.py  test.py
docs/chint/Qwen/: ATS.html  Cargo.toml  Index.html  Index1.html  index.html  main.rs  readme.md
docs/chint/Qwen/src/: Txt  main.rs
docs/chint/React/src/: App.jsx  index.css
docs/chint/React/src/nodes/: ConsoleNode.jsx  SourceNode.jsx  SwitchNode.jsx
docs/chint/Rust/: .env  ATS 2.html  Cargo.toml  README.md  index.html
docs/chint/Rust/src/: index.html  main.rs  txt
flux-nodered/: Solar_power.json  deye.json  feedinpower.json  fix-pvinv-baseline.json  flows (11).json  flows (7).json  flows (9).json  flows 14.json  flows 7.json  inverter.json  irradiance-rs485.json  managewaterheater.json  meteo.json  previsions.json  readme-migration.md  setwaterheater.json  shelly.json  shelly2.json  tasmota.json  test-venus-validation.json  testing.json  waterheater.json
grafana/provisioning/dashboards/: bms-batteries.json
grafana/provisioning/datasources/: influxdb.yaml
mac-local/docs/: GUIDE_TECHNIQUE.md
mac-local/src/: registers.js  serial.js
main/: CMakeLists.txt
main/config_manager/: config_manager_core.c  config_manager_mqtt.c  config_manager_registers.c
main/web_server/: web_server_websocket.c  web_server_websocket.h
nanoPi/: README.md  config-bms1.ini  config-bms2.ini  config-nanopi.toml  install-venus.sh
nanoPi/sv/daly-bms-server/: run
nanoPi/sv/daly-bms-venus/: run
tools/chint-ats/: modbus.js  package.json  server.js
tools/chint-ats/public/: index.html
web/: dashboard.js  index.html
web/src/: index.html
web/src/components/configuration/: index.html
