idf_component_register(SRCS
    "app_main.c"
    "event_bus/event_bus.c"
    "status_led/status_led.c"
    "uart_bms/uart_bms.cpp"
    "uart_bms/uart_frame_builder.cpp"
    "uart_bms/uart_response_parser.cpp"
    "uart_bms/uart_bms_protocol.c"
    "can_publisher/can_publisher.c"
    "can_publisher/conversion_table.c"
    "can_victron/can_victron.c"
    "pgn_mapper/pgn_mapper.c"
    "web_server/web_server_core.c"
    "web_server/web_server_auth.c"
    "web_server/web_server_ota.c"
    "web_server/web_server_api.c"
    "web_server/web_server_websocket.c"
    "web_server/web_server_static.c"
    "web_server/web_server_alerts.c"
    "ota_update/ota_update.c"
    "system_control/system_control.c"
    "config_manager/config_manager.c"
    "mqtt_client/mqtt_client.c"
    "mqtt/tiny_mqtt_publisher.c"
    "mqtt_gateway/mqtt_gateway.c"
    "wifi/wifi.c"
    "monitoring/monitoring.c"
    "monitoring/history_logger.c"
    "storage/nvs_energy.c"
    "storage/history_fs.c"
    "alert_manager/alert_manager.c"
    INCLUDE_DIRS "include"
                 "event_bus"
                 "status_led"
                 "uart_bms"
                 "can_publisher"
                 "can_victron"
                 "pgn_mapper"
                 "web_server"
                 "ota_update"
                 "system_control"
                 "config_manager"
                 "mqtt_client"
                 "mqtt"
                 "mqtt_gateway"
                 "wifi"
                 "monitoring"
                 "storage"
                 "alert_manager"
    REQUIRES cjson)
