[package]
name        = "daly-bms-cli"
description = "Outil CLI pour tester et déboguer les BMS Daly sur le bus RS485"
version.workspace   = true
edition.workspace   = true
authors.workspace   = true
license.workspace   = true
rust-version.workspace = true

[[bin]]
name = "daly-bms-cli"
path = "src/main.rs"

[dependencies]
daly-bms-core = { path = "../daly-bms-core" }

tokio        = { workspace = true }
serde_json   = { workspace = true }
anyhow       = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
clap         = { workspace = true }
chrono       = { workspace = true }
