[package]
name        = "daly-bms-core"
description = "Protocole UART Daly BMS, types, parsing trames, gestion multi-BMS"
version.workspace   = true
edition.workspace   = true
authors.workspace   = true
license.workspace   = true
rust-version.workspace = true

[dependencies]
tokio         = { workspace = true }
tokio-serial  = { workspace = true }
tokio-util    = { workspace = true }
bytes         = { workspace = true }
futures       = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
anyhow        = { workspace = true }
thiserror     = { workspace = true }
tracing       = { workspace = true }
chrono        = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
