[package]
name        = "daly-bms-server"
description = "Serveur Axum (API REST + WebSocket) + bridges (MQTT, InfluxDB, Alertes)"
version.workspace   = true
edition.workspace   = true
authors.workspace   = true
license.workspace   = true
rust-version.workspace = true

[[bin]]
name = "daly-bms-server"
path = "src/main.rs"

[dependencies]
daly-bms-core = { path = "../daly-bms-core" }

tokio          = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
toml           = { workspace = true }
anyhow         = { workspace = true }
thiserror      = { workspace = true }
tracing        = { workspace = true }
tracing-subscriber = { workspace = true }
axum           = { workspace = true }
tower          = { workspace = true }
tower-http     = { workspace = true }
rumqttc        = { workspace = true }
influxdb2      = { workspace = true }
influxdb2-structmap = { workspace = true }
rusqlite       = { workspace = true }
reqwest        = { workspace = true }
lettre         = { workspace = true }
chrono         = { workspace = true }
uuid           = { workspace = true }
futures        = { workspace = true }
bytes          = { workspace = true }
