[package]
name = "chint-ats-server"
version = "3.0.0"
edition = "2021"
authors = ["Votre Nom"]
description = "Serveur de gestion CHINT ATS via Modbus RTU"

[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serialport = "4.2"
chrono = "0.4"
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.10"
